--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE HTML>
  
-<!--
-	Dimension by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>My portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -25,7 +21,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>My name is Stefan PEjcinoski</h1>
+								<h1>My name is Stefan Pejcinoski</h1>
 								<p>A passionate developer , always excited about learning.</p>
 							</div>
 						</div>
