--- a/index.html
+++ b/index.html
@@ -72,10 +72,9 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href=https://www.linkedin.com/in/stefan-pejcinoski-9072a2165 class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+									<li><a href=https://www.github.com/StefanPejcinoski class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									
 								</ul>
 							</article>
 
