--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <html>
 	<head>
+		<meta name="referrer" content="origin">  <!--fix za Referrer greska vo formspree so github pages -->
 		<title>My portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
