--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>My name is Stefan Pejcinoski</h1>
-								<p>A passionate developer , always excited about learning.</p>
+								<p>A passionate developer , always excited about learning new things.</p>
 							</div>
 						</div>
 						<nav>
