--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 									</ul>
 
 									<input type="text" name="_gotcha" style="display: none" />	
-									<input type="hidden" name="_next" value="https://stefanpejcinoski.github.io"/>
+									<input type="hidden" name="_next" value="https://stefanpejcinoski.github.io"/> <!--Paid users only :/-->
 									<input type="hidden" name="_subject" value="Contact through portfolio page"  />		
 								</form>
 								<script>
