changed awful logo

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
+							<span><h1>HELLO</h1></span>
 						</div>
 						<div class="content">
 							<div class="inner">
