--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 						<nav>
 							<ul>
 								<li><a href="#projects">Projects</a></li>
-								<li><a href="/cv/Resume.pdf" Download="StefanPejcinoskiCV.pdf">Download My CV</a></li>
+								<li><a href="/cv/StefanPejcinoskiCV.pdf" Download="StefanPejcinoskiCV.pdf">Download My CV</a></li>
 								<li><a href="#contact">Contact Me</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
