links open in new tabs

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright"><a href=https://www.linkedin.com/in/stefan-pejcinoski-9072a2165 target="_blank" rel="noopener noreferrer" class="fab fa-linkedin-in" style="padding-right: 1%;border:none"></a><a href=https://www.github.com/StefanPejcinoski class="fab fa-github" style="border: none"></a></p>
+						<p class="copyright"><a href=https://www.linkedin.com/in/stefan-pejcinoski-9072a2165 target="_blank" rel="noopener noreferrer" class="fab fa-linkedin-in" style="padding-right: 1%;border:none"></a><a href=https://www.github.com/StefanPejcinoski target="_blank" rel="noopener noreferrer"  class="fab fa-github" style="border: none"></a></p>
 					</footer>
 
 			</div>
