--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 						<div class="content">
 							<div class="inner">
 								<h1>My name is Stefan Pejcinoski</h1>
-								<p>A passionate developer , always excited about learning new things.</p>
+								<p>A newcomer in the field of software development, looking to improve his current skills and pick up new ones.</p>
 							</div>
 						</div>
 						<nav>
